# godot-protobuf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: gd_protobuf.cpp  gd_protobuf.h  register_types.cpp  register_types.h
test-project/: godot-protobuf.gdextension  main.gd  main.tscn  project.godot  test.proto
